Removed weave-test since we are now using flannel, added kube-dns-test instead since kube-dns is dependent on a working network and will fail if flannel network not is up

--- a/playbooks/infra-test.yml
+++ b/playbooks/infra-test.yml
@@ -2,7 +2,7 @@
   gather_facts: False
   roles:
     - { role: common-test, tags: [ 'minimal' ] }
-    - { role: weave-network-test, tags: [ 'minimal' ] }
+    - { role: kube-dns-test, tags: [ 'minimal' ] }
     - { role: start-helm-test, tags: [ 'minimal' ] }
     - { role: traefik-test, tags: [ 'traefik' ] }
     - { role: dns-test, tags: [ 'minimal' ] }
