uses terraform fmt flag -check=true instead of git diff after rewrite

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,10 +52,9 @@ before_install:
 
   # Check code quality
   # check Terraform
-  - terraform fmt common/cloudflare
-  - terraform fmt common/inventory
-  - terraform fmt "$HOST_CLOUD"
-  - git diff --exit-code # this will fail if terraform changed something
+  - terraform fmt -check=true common/cloudflare
+  - terraform fmt -check=true common/inventory
+  - terraform fmt -check=true "$HOST_CLOUD"
   # check Ansible
   # skip ANSIBLE0006: avoid using curl
   # skip ANSIBLE0012: missing change_when on command/shell etc.
