--- a/playbooks/roles/common/tasks/untaint_master.yml
+++ b/playbooks/roles/common/tasks/untaint_master.yml
@@ -1,5 +1,8 @@
 ---
+# ignore_errors because kubectl will exit with errorcode if taint doesn't exist,
+# which is the case if playbook is being run twice
 - name: "untaint master if it is the only node"
   command: >
     kubectl taint nodes
     --all node-role.kubernetes.io/master-
+  ignore_errors: yes
