--- a/playbooks/infra-test.yml
+++ b/playbooks/infra-test.yml
@@ -2,6 +2,7 @@
   gather_facts: False
   roles:
     - { role: common-test, tags: [ 'minimal' ] }
+    - { role: flannel-network-test, tags: [ 'minimal' ] }
     - { role: kube-dns-test, tags: [ 'minimal' ] }
     - { role: start-helm-test, tags: [ 'minimal' ] }
     - { role: traefik-test, tags: [ 'traefik' ] }
