--- a/playbooks/roles/pvc/templates/template-pvc.yml
+++ b/playbooks/roles/pvc/templates/template-pvc.yml
@@ -9,3 +9,6 @@ spec:
   resources:
     requests:
       storage: {{storage}}
+{% if storageClassName is defined %}
+  storageClassName: {{ storageClassName }}
+{% endif %}
