--- a/.travis.yml
+++ b/.travis.yml
@@ -52,10 +52,9 @@ before_install:
 
   # Check code quality
   # check Terraform
-  - terraform fmt common/cloudflare
-  - terraform fmt common/inventory
-  - terraform fmt "$HOST_CLOUD"
-  - git diff --exit-code # this will fail if terraform changed something
+  - terraform fmt -check=true common/cloudflare
+  - terraform fmt -check=true common/inventory
+  - terraform fmt -check=true "$HOST_CLOUD"
   # check Ansible
   # skip ANSIBLE0006: avoid using curl
   # skip ANSIBLE0012: missing change_when on command/shell etc.
@@ -71,11 +70,8 @@ install: docker build -t kubenow/provisioners:latest .
 
 before_script:
 
-  # Copy kn bin
-  - sudo cp bin/kn /usr/bin/
-  
   # Init test deployment
-  - kn init ${HOST_CLOUD} test-deployment
+  - bin/kn init test-deployment
   - cd test-deployment
 
   # Overwrite ssh-key for debug purposes
@@ -83,7 +79,13 @@ before_script:
   - echo -e "$TRAVIS_SSH_KEY_PUB" > ssh_key.pub
 
   # RENDER CONFIGURATION
-
+  # Create terraform.tfvars
+  - >
+      if [ "$HOST_CLOUD" = 'openstack' ]; then
+        cp terraform.tfvars.os-template terraform.tfvars
+      else
+        cp "terraform.tfvars.${HOST_CLOUD}-template" terraform.tfvars
+      fi
   # Common
   - sed -i -e "s/your-cluster-prefix/kubenow-ci-${TRAVIS_BUILD_NUMBER}-${HOST_CLOUD}/g" terraform.tfvars
   # AWS
@@ -119,15 +121,15 @@ before_script:
 
 script:
   # Deploy
-  - kn apply
+  - ../bin/kn apply "$HOST_CLOUD"
   # Test
-  - kn ansible-playbook /opt/KubeNow/playbooks/infra-test.yml
-  - kn kubectl get nodes # try to list nodes
-  - kn helm list # try to helm list
-  - kn openstack --version # try to run an openstack command
+  - ../bin/kn ansible-playbook /opt/KubeNow/playbooks/infra-test.yml
+  - ../bin/kn kubectl get nodes # try to list nodes
+  - ../bin/kn helm list # try to helm list
+  - ../bin/kn openstack --version # try to run an openstack command
 
 after_script:
-  - export TERRAFORM_OPT="-force" && travis_retry kn destroy
+  - export TERRAFORM_OPT="-force" && travis_retry ../bin/kn destroy "$HOST_CLOUD"
   - travis_retry terraform destroy -force "$HOST_CLOUD" # in case there is some problem with kn
 
 jobs:
