Revert "remove DL3015 from hadolint"
This reverts commit fd3f2482cd7b179b6cf356e052a491163850ebfd.

--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ before_install:
   - shfmt -i 2 -ci -w bootstrap/*
   - git diff --exit-code
   # check Dockerfile
-  - docker run --rm -i lukasmartinelli/hadolint hadolint --ignore DL3008 --ignore DL3015 - < Dockerfile
+  - docker run --rm -i lukasmartinelli/hadolint hadolint --ignore DL3008 --ignore DL3015 --ignore DL3013 - < Dockerfile
 
 # Build Docker image
 install: docker build -t kubenow/provisioners:latest .
