--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ before_install:
   - shellcheck bootstrap/*
   - shellcheck bin/*
   - shfmt -i 2 -ci -w bootstrap/*
-  - shfmt -i 2 -ci -w bootstrap/*
+  - shfmt -i 2 -ci -w bin/*
   - git diff --exit-code
   # check Dockerfile
   - docker run --rm -i lukasmartinelli/hadolint hadolint --ignore DL3008 --ignore DL3015 --ignore DL3013 - < Dockerfile
