--- a/playbooks/install-core.yml
+++ b/playbooks/install-core.yml
@@ -1,9 +1,10 @@
+---
 - hosts: master
-  gather_facts: False
+  gather_facts: "False"
   roles:
-    - { role: common, tags: [ 'minimal' ] }
-    - { role: flannel-network, tags: [ 'minimal' ] }
-    - { role: wait-kube-dns, tags: [ 'minimal' ] }
-    - { role: start-helm, tags: [ 'minimal' ] }
-    - { role: traefik, tags: [ 'traefik' ] }
-    - { role: heketi-gluster, tags: [ 'heketi-glusterfs' ], when: glusternode_count is defined and glusternode_count > 0 }
+    - {role: common, tags: ['minimal']}
+    - {role: flannel-network, tags: ['minimal']}
+    - {role: wait-kube-dns, tags: ['minimal']}
+    - {role: start-helm, tags: ['minimal']}
+    - {role: traefik, tags: ['traefik']}
+    - {role: heketi-gluster, tags: ['heketi-glusterfs'], when: glusternode_count is defined and glusternode_count > 0}
