--- a/playbooks/infra-test.yml
+++ b/playbooks/infra-test.yml
@@ -1,10 +1,11 @@
+---
 - hosts: master
-  gather_facts: False
+  gather_facts: "False"
   roles:
-    - { role: common-test, tags: [ 'minimal' ] }
-    - { role: flannel-network-test, tags: [ 'minimal' ] }
-    - { role: kube-dns-test, tags: [ 'minimal' ] }
-    - { role: start-helm-test, tags: [ 'minimal' ] }
-    - { role: traefik-test, tags: [ 'traefik' ] }
-    - { role: dns-test, tags: [ 'minimal' ] }
-    - { role: shared-volume-test, tags: [ 'glusterfs' ] }
+    - {role: common-test, tags: ['minimal']}
+    - {role: flannel-network-test, tags: ['minimal']}
+    - {role: kube-dns-test, tags: ['minimal']}
+    - {role: start-helm-test, tags: ['minimal']}
+    - {role: traefik-test, tags: ['traefik']}
+    - {role: dns-test, tags: ['minimal']}
+    - {role: shared-volume-test, tags: ['glusterfs']}
