With travis test selected commands outside init-dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -137,6 +137,8 @@ script:
   - kn kubectl get nodes # try to list nodes
   - kn helm list # try to helm list
   - kn ssh master 'uname && exit' # ssh to master and execute commands
+  # Test commands outside the init-dir
+  - cd /tmp
   - kn openstack --version # try to run an openstack command
   - kn az --version # try to run an azure cli command
   - kn gcloud --version # try to run an gcloud cli command
