remove whitespace in volumetype

--- a/playbooks/roles/heketi-gluster/tasks/storage-creation.yml
+++ b/playbooks/roles/heketi-gluster/tasks/storage-creation.yml
@@ -54,11 +54,12 @@
     glusterpod_count: "{{ (enpoint_list | length) | int }}"
 
 # volumtype (replication factor): <VolumeDurability>:number eg. none:1, replicate:2, replicate:3 , disperse:???
+# in jinja2 - means remove any whitespace before this bracket
 - name: set fact volumetype
   set_fact:
     volumetype: "{% if (glusterpod_count | int) == 1 %}none:1
-                 {% elif (glusterpod_count | int) == 2 %}replicate:2
-                 {% else %}replicate:3{% endif %}"
+                 {%- elif (glusterpod_count | int) == 2 %}replicate:2
+                 {%- else %}replicate:3{% endif %}"
   when: volumetype is undefined
 
 - name: render storage-class
