--- a/playbooks/roles/heketi-gluster/templates/storage-class.yml
+++ b/playbooks/roles/heketi-gluster/templates/storage-class.yml
@@ -9,4 +9,4 @@ metadata:
 provisioner: kubernetes.io/glusterfs
 parameters:
   resturl: "http://{{ heketi_endpoint }}"
-  volumetype: "{{ volumetype }}"
+  volumetype: {{ volumetype }}
