added taint of glusternodes to heketi-gluster playbook

--- a/playbooks/roles/heketi-gluster/tasks/heketi-server.yml
+++ b/playbooks/roles/heketi-gluster/tasks/heketi-server.yml
@@ -1,4 +1,8 @@
 ---
+- name: taint gluster nodes
+  command: >
+    kubectl taint node -l storagenode=glusterfs dedicated=fileserver:NoSchedule
+
 - name: create heketi yaml directory
   file:
     path: ~/.kubernetes-yaml/heketi/
