Add --overwrite param to node tainting to allow for applying command multiple times

--- a/playbooks/roles/heketi-gluster/tasks/heketi-server.yml
+++ b/playbooks/roles/heketi-gluster/tasks/heketi-server.yml
@@ -1,7 +1,7 @@
 ---
 - name: taint gluster nodes
   command: >
-    kubectl taint node -l storagenode=glusterfs dedicated=fileserver:NoSchedule
+    kubectl taint node --overwrite=true -l storagenode=glusterfs dedicated=fileserver:NoSchedule
 
 - name: create heketi yaml directory
   file:
