--- a/playbooks/roles/heketi-gluster/templates/storage-class.yml
+++ b/playbooks/roles/heketi-gluster/templates/storage-class.yml
@@ -10,7 +10,7 @@ provisioner: kubernetes.io/glusterfs
 parameters:
   resturl: "http://{{ heketi_endpoint }}"
   volumetype: {{volumetype}}
-  volumeoptions: "performance.stat-prefetch off"
+  volumeoptions: {{gluster_volumeoptions}}
 mountOptions:
   - entry-timeout=0
   - attribute-timeout=0
