--- a/playbooks/roles/heketi-gluster/tasks/storage-creation.yml
+++ b/playbooks/roles/heketi-gluster/tasks/storage-creation.yml
@@ -72,12 +72,12 @@
     kubectl apply -f
     $HOME/.kubernetes-yaml/heketi/storage-class.yml
 
-- name: render minio storage-class
+- name: render object-store storage-class
   template:
-    src: minio-storage-class.yml
-    dest: "~/.kubernetes-yaml/heketi/minio-storage-class.yml"
+    src: object-store-sc.yml
+    dest: "~/.kubernetes-yaml/heketi/object-store-sc.yml"
 
 - name: create storage-class
   command: >
     kubectl apply -f
-    $HOME/.kubernetes-yaml/heketi/minio-storage-class.yml
+    $HOME/.kubernetes-yaml/heketi/object-store-sc.yml
