--- a/.travis.yml
+++ b/.travis.yml
@@ -148,7 +148,7 @@ script:
 
 after_script:
   - export TERRAFORM_OPT="-force" && travis_retry kn destroy
-  - travis_retry terraform destroy -force "$HOST_CLOUD" # in case there is some problem with kn
+  - travis_retry rm -f .terraform/plugin_path && terraform init "$HOST_CLOUD" && terraform destroy -force -var-file=config.tfvars "$HOST_CLOUD" # in case there is some problem with kn
 
 jobs:
   include:
