use 050b1 image on amazon

--- a/.travis.yml
+++ b/.travis.yml
@@ -167,13 +167,14 @@ jobs:
         # Build and push Docker image (needs to be build again in this stage)
         - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
         - >
-            if [ -n "$TRAVIS_TAG" ]; then
+            if [[ -n "$TRAVIS_TAG" ]]; then
               docker build -t kubenow/provisioners:$TRAVIS_TAG \
                 -t kubenow/provisioners:latest .
               docker push kubenow/provisioners:$TRAVIS_TAG
               docker push kubenow/provisioners:latest
             elseif [[ "$TRAVIS_BRANCH" == "master" ||
-                      "$TRAVIS_BRANCH" == *"phenomenal"* ]]
+                      "$TRAVIS_BRANCH" == *"stable"* ||
+                      "$TRAVIS_BRANCH" == *"development"* ]]
               # Create a docker image tag out of branch-name where / is replaced by -
               tag="${TRAVIS_BRANCH/\//-}"
               docker build -t kubenow/provisioners:$tag .
