--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,7 @@ before_script:
   - sudo cp bin/kn /usr/local/bin/
 
   # Init test deployment
+  - export KN_PROVISIONERS_IMG=kubenow/provisioners:$tag
   - kn init ${HOST_CLOUD} test-deployment
   - cd test-deployment
 
