--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,7 @@ before_install:
   # skip ANSIBLE0012: missing change_when on command/shell etc.
   - ansible-lint -x ANSIBLE0006,ANSIBLE0012 playbooks/*.yml
   # check Shell
+  - shellcheck --version
   - shellcheck bootstrap/*
   - shellcheck bin/*
   - docker run -v "$(pwd)":/sh -w /sh jamesmstone/shfmt -i 2 -w bin/*
