Add nginx as ingress option
This adds the option to use nginx as ingress controller in an OpenStack environment. The benefits are that the user are not limited to ingress on port 80/443 and adds the ability to handle non HTTP/S traffic.

--- a/playbooks/install-core.yml
+++ b/playbooks/install-core.yml
@@ -7,4 +7,5 @@
     - {role: wait-kube-dns, tags: ['minimal']}
     - {role: start-helm, tags: ['minimal']}
     - {role: traefik, tags: ['traefik'], when: ingress_controller is undefined or (ingress_controller is defined and ingress_controller == "traefik")}
+    - {role: nginx, tags: ['nginx'], when: ingress_controller is defined and ingress_controller == "nginx"}
     - {role: heketi-gluster, tags: ['heketi-glusterfs'], when: glusternode_count is defined and glusternode_count > 0}
