--- a/playbooks/roles/nginx/tasks/main.yaml
+++ b/playbooks/roles/nginx/tasks/main.yaml
@@ -5,4 +5,4 @@
 
 - name: install nginx
   command: >
-    helm install --name nginx-ingress --namespace=nginx-ingress stable/nginx-ingress --values /tmp/nginx-config.yml
+    helm upgrade --install nginx-ingress --namespace=nginx-ingress stable/nginx-ingress --values /tmp/nginx-config.yml
