Allow nginx to be started on the mater node

--- a/playbooks/roles/nginx/templates/nginx-config.yaml
+++ b/playbooks/roles/nginx/templates/nginx-config.yaml
@@ -1,4 +1,7 @@
 controller:
+  tolerations:
+  - effect: NoSchedule
+    key: node-role.kubernetes.io/master
   nodeSelector:
     role: edge
   hostNetwork: true
