--- a/.travis.yml
+++ b/.travis.yml
@@ -168,9 +168,9 @@ jobs:
                 -t kubenow/provisioners:latest .
               docker push kubenow/provisioners:$TRAVIS_TAG
               docker push kubenow/provisioners:latest
-            elseif [[ "$TRAVIS_BRANCH" == "master" ||
+            elif [[ "$TRAVIS_BRANCH" == "master" ||
                       "$TRAVIS_BRANCH" == *"stable"* ||
-                      "$TRAVIS_BRANCH" == *"development"* ]]
+                      "$TRAVIS_BRANCH" == *"development"* ]]; then
               # Create a docker image tag out of branch-name where / is replaced by -
               tag="${TRAVIS_BRANCH/\//-}"
               docker build -t kubenow/provisioners:$tag .
