--- a/playbooks/roles/flannel-network/tasks/main.yml
+++ b/playbooks/roles/flannel-network/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: "install flannel-network"
-  command: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/v0.9.1/Documentation/kube-flannel.yml
+  command: kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/bc79dd1505b0c8681ece4de4c0d86c5cd2643275/Documentation/kube-flannel.yml
