Enable etcd encryption
As of kubernetes 1.13 encryption of of secrets at rest is considered a stable feture. This enables the user to optionally enable encryption of the etcd datastore. The encryption key is automatically generated during deployment.

--- a/playbooks/install-core.yml
+++ b/playbooks/install-core.yml
@@ -8,4 +8,5 @@
     - {role: start-helm, tags: ['minimal']}
     - {role: traefik, tags: ['traefik'], when: ingress_controller is undefined or (ingress_controller is defined and ingress_controller == "traefik")}
     - {role: nginx, tags: ['nginx'], when: ingress_controller is defined and ingress_controller == "nginx"}
+    - {role: encrypt-etcd, tags: ['encrypt-etcd'], when encrypt_etcd is defined and encrypt_etcd == "true"}
     - {role: heketi-gluster, tags: ['heketi-glusterfs'], when: glusternode_count is defined and glusternode_count > 0}
